# space-invaders-arcade-emulator-tauri

./: .eslintrc.json  README.md  index.html  package-lock.json  package.json
.github/workflows/: tauri-publish.yml  tauri.yml
src/: App.jsx  main.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
